--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
+# Core dependencies
 openai>=1.0.0
-pyyaml>=6.0
 python-dotenv>=1.0.0
-pydantic>=2.0.0
-loguru>=0.7.0 
+pyyaml>=6.0
+
+# Web server dependencies
+flask>=3.0.0
+flask-socketio>=5.3.0
+flask-cors>=4.0.0
+
+# Additional dependencies
+requests>=2.31.0
+urllib3>=2.0.0
+
+# Development dependencies (optional)
+# pytest>=7.0.0
+# black>=23.0.0
+# flake8>=6.0.0 
